Fix style spacing and external link icon

--- a/scss/partials/_layout.scss
+++ b/scss/partials/_layout.scss
@@ -65,12 +65,6 @@ body {
   }
 }
 
-p {
-    margin: 0 0 16px;
-
-}
-
-
 
 
 
